--- a/css/createGroupButton.css
+++ b/css/createGroupButton.css
@@ -1,5 +1,5 @@
 .createGroupButton {
-    position: absolute; 
+    position: absolute; /* Set fixed positioning for the button */
     width: 60px;
     height: 60px;
     border-radius: 50%;
@@ -8,16 +8,14 @@
     justify-content: center;
     align-items: center;
     cursor: pointer;
-
-    top: 640px; /* Adjust the top value as needed */
-    left: 285px; /* Adjust the left value as needed */
-
-    z-index: 1;
+    bottom: 20px; /* Adjust the top value as needed */
+    left: 280px; /* Adjust the left value as needed */
+    z-index: 100;
     box-shadow: 8px 2px 12px rgba(0, 0, 0, 0.3);
 }
 
 .createGroupButton img {
     width: 30px;
     height: 30px;
-    z-index: 1;
+    z-index: 150;
 }
